// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Expertise component renders Expertise with data in props 1`] = `
<span
  class="date"
>
  2013-2023
</span>
`;

exports[`Expertise component renders Expertise with data in props 2`] = `
<span
  class="date"
>
  2023 feb - 2023 may
</span>
`;

exports[`Expertise component renders Expertise with data in props 3`] = `
<span
  class="date"
>
  2013-2023
</span>
`;

exports[`Expertise component renders Expertise with data in props 4`] = `
<span
  class="date"
>
  2023 feb - 2023 may
</span>
`;

exports[`button component renders Expertise wit 1`] = `
<span
  class="date"
>
  2013-2023
</span>
`;

exports[`button component renders Expertise wit 2`] = `
<span
  class="date"
>
  2023 feb - 2023 may
</span>
`;

exports[`button component renders Expertise with data 1`] = `
<span
  class="date"
>
  2013-2023
</span>
`;

exports[`button component renders Expertise with data 2`] = `
<span
  class="date"
>
  2023 feb - 2023 may
</span>
`;

exports[`button component renders button with text prop 1`] = `
<span
  class="date"
>
  2013-2023
</span>
`;

exports[`button component renders button with text prop 2`] = `
<span
  class="date"
>
  2023 feb - 2023 may
</span>
`;
